name:                eagletree-reverse
version:             0.1.0.0
synopsis:            A program to decode eagletree OSD video
description:         Please see README.md
homepage:            https://github.com/expipiplus1/eagletree-reverse#readme
license:             BSD3
license-file:        LICENSE
author:              Joe Hermaszewski
maintainer:          trgleaee@monoid.al
copyright:           2017 Joe Hermaszewski
category:            Video
build-type:          Simple
extra-source-files:  default.nix shell.nix
cabal-version:       >=1.10

executable upfind
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ffmpeg-light
                     , say
                     , JuicyPixels
                     , Chart
                     , Chart-cairo
                     , lens
                     , colour
                     , extra
                     , data-default-class
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/expipiplus1/eagletree-reverse
